= Cerberus Changelog

== Version 0.3.4
Major changes

Fixed bug with Cerberus::Util spotted by Mohamemd Alvi

== Version 0.3.3
Major changes

* Fix Const load problem with Rails 1.2RC1
* Correctly implement Jabber publisher using XMPP4R library
* Upgrade Webgen to 0.4.1
* Added 'getting better/worse' to build messages' subject
* Added possibility to configure events on what you would like to receive messages. 
  By default used 'default' events. It means all except 'successful' state.
  You could set to this options list of any valid states such as [broken, failed, revival, successful, setup] or predefined sets as
  [all, default, none].

  You could configure by setting :on_event option to :publisher options branch, or to concrete publisher configuration.
  In case if this option added both to :publisher and :publisher,<PUBLISHER> then concrete configurations wins.

  Examples of configuration

publisher:
  on_event: broken, revival
  mail:
    on_event: all
  jabber:
    #nothing here

  In given example we would send messages about ALL events by mail and only messages about brokeness and revivalness by Jabber.

== Version 0.3.2
Added Perforce SCM support

* Added support of Perforce

== Version 0.3.1
Added BJam builder support

* Use lazy loading of cerberus components (publishers, vcs, builder)
* Show Cerberus home in Help
* Added 'list' command that shows names of all *active* projects
* Added BJam building tool http://www.boost.org/tools/build/v2/index.html

== Version 0.3.0
Fix release

* Added support of Campfire publisher
* Added changeset_url option that adds quick link to browsable chanelist view
* Added possibility to specify user_name and password for Subversion commands
* Added support of Darcs VCS

== Version 0.2.4
Features release

* Fix problem with TLS hack. Now possible to send to SSL and vanilla mailservers without modifying code.
* Added rant support (http://make.rubyforge.org) [Xavier Shay]